# SnakeRL

./: .gitignore  agent.py  config.yaml  display.py  game.py  human.py  latest.prof  main.ipynb  main.py  manual.py  model.py  plot.py  pyproject.toml  run_best_model.py
src/: display.py  human.py  logger_callback.py  monitor.py  snake_env.py
training/logs/: events.out.tfevents.1702217985.fedora.431674.0  events.out.tfevents.1702218048.fedora.431674.1  events.out.tfevents.1702218063.fedora.432696.0  events.out.tfevents.1702218122.fedora.433182.0  events.out.tfevents.1702218157.fedora.433493.0  events.out.tfevents.1702218192.fedora.433957.0  events.out.tfevents.1702218248.fedora.434767.0  events.out.tfevents.1702218269.fedora.434967.0  events.out.tfevents.1702218349.fedora.435962.0  events.out.tfevents.1702218357.fedora.436083.0  events.out.tfevents.1702218382.fedora.436336.0  events.out.tfevents.1702218447.fedora.436904.0  events.out.tfevents.1702218560.fedora.437711.0  events.out.tfevents.1702218624.fedora.437910.0  events.out.tfevents.1702218634.fedora.438059.0  events.out.tfevents.1702218654.fedora.438278.0  events.out.tfevents.1702218855.fedora.439485.0  events.out.tfevents.1702219806.fedora.445128.0  events.out.tfevents.1702220407.fedora.473620.0  events.out.tfevents.1702220477.fedora.474234.0  events.out.tfevents.1702221541.fedora.530040.0  events.out.tfevents.1702222018.fedora.533680.0  events.out.tfevents.1702222229.fedora.536327.0  events.out.tfevents.1702222567.fedora.538869.0  events.out.tfevents.1702222575.fedora.539021.0  (+46 more)
(+49 files in other folders)
