[tool.poetry]
name = "snakerl"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pygame = "^2.5.2"
torch = "^2.1.1"
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
